<?xml version="1.0"?>
<package format="2">
  <name>ntrip_client</name>
  <version>1.0.0</version>
  <description>NTRIP client that will publish RTCM corrections to a ROS topic, and optionally subscribe to NMEA messages to send to an NTRIP server</description>
  <author>Parker Hannifin Corp</author>
  <maintainer email="rob.fisher@parker.com">Rob Fisher</maintainer>
  <maintainer email="melissa.gill@parker.com">Melissa Gill</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/LORD-MicroStrain/ntrip_client</url>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nmea_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
